# python-project-52

./: .env.simple  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: check.yaml
task_manager/: forms.py  mixins.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/fixtures/: db.json  fixtures.json  test_helpers.py  user2.json  userforlogin.json  usertest.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label_created_at_label_name.py  0003_alter_label_name.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_statuses_is_active_alter_statuses_name.py  0003_rename_statuses_status.py  0004_remove_status_is_active.py  0005_alter_status_created_at.py  0006_alter_status_created_at_alter_status_name.py
task_manager/tags/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_delete_task.py  0002_task_autor.py  0003_initial.py  0003_task_status.py  0004_alter_task_executor.py  0004_task_executor_alter_task_autor.py  0005_alter_task_labels.py  0005_task_description.py  0006_alter_task_name.py  0006_task_created_at_task_tags.py  0007_rename_tags_task_label.py  (+7 more)
task_manager/templates/: base.html  form.html  index.html  login.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
(+29 files in other folders)
